--- a/index.html
+++ b/index.html
@@ -3,30 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Harry Potter Series</title>
+    <title>Harry Potter: The Forbidden Task</title>
 </head>
 <body>
-
-    <!-- Navigation Bar -->
-    <nav>
-        <a href="index.html">Home</a> |
-        <a href="harryPotter.html">Harry Potter</a> |
-        <a href="ronWeasley.html">Ron Weasley</a>
-    </nav>
-
-    <!-- Page Header -->
-    <h1>Welcome to the World of Harry Potter</h1>
-
-    <!-- Image -->
-    <img src="assets/harryPotterFilm.jpg" alt="Harry Potter Film Wizardry" width="400">
-
-    <!-- Introduction -->
-    <p>
-        The <strong>Harry Potter</strong> series, written by J.K. Rowling, is one of the most beloved fantasy book and film franchises of all time. 
-        It follows the journey of Harry Potter, a young wizard who discovers his magical heritage on his eleventh birthday and attends 
-        Hogwarts School of Witchcraft and Wizardry. Alongside his best friends Ron Weasley and Hermione Granger, Harry navigates the challenges 
-        of the wizarding world while battling the dark forces led by Lord Voldemort.
-    </p>
-
+    <h1>Harry Potter: The Forbidden Task</h1>
+    <img src="assets/harryPotterFilm.jpg" alt="Harry Potter Scene" width="400">
+    <p>You are a <strong>fifth-year Hogwarts student</strong>, and during your time at school, you've discovered a <strong>mysterious note</strong> hidden inside an old library book. The note hints at a <strong>forbidden secret</strong> hidden somewhere deep within the castle—one that could change the fate of Hogwarts forever.</p>
+    <p>You open the old book, and the note reads:<br><em>"The truth lies beneath the castle, but only the brave shall find it."</em></p>
+    <p>You have three choices:</p>
+    <ul>
+        <li><a href="mcgonagall.html">Tell a professor about the note</a> (McGonagall might have answers, but will she stop you?)</li>
+        <li><a href="friend.html">Show the note to your best friend</a> (A trusted ally might help you decode it.)</li>
+        <li><a href="alone.html">Keep it a secret and investigate alone</a> (No one else can interfere, but it might be risky.)</li>
+    </ul>
 </body>
 </html>
